--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Encriptador de Texto</title>
+
 </head>
+
 <body>
-    Hola Mundo
+    <header>
+        <img class="logo" src="imagenes/logo.png" onclick="home()">
+    </header>
+    <main>
+        contenido
+    </main>
+    <footer>
+        pie de pagina
+    </footer>
 </body>
+
 </html>
